--- a/languages/ml/mirageos.org
+++ b/languages/ml/mirageos.org
@@ -1,3 +1,8 @@
+- AWS https://mirage.io/docs/xen-boot
+- (HN) The BitCoin Piñata https://news.ycombinator.com/item?id=9027743
+- Podcast Episode
+  Episode 204: Anil Madhavapeddy on the Mirage Cloud Operating System and the OCaml Language
+  https://www.youtube.com/watch?v=ZYGWDpIS5UE
 - Compile your own cloud with Mirage OS v2.0 by Thomas Gazagnaire
   https://www.youtube.com/watch?v=WZMJNrGKgKo
 - Nomadic Labs Research Seminars #16 | Package Tezos as a MirageOS Unikernel
@@ -11,3 +16,15 @@
   - Single Process
   - Singel Address Space
   - Resume 17:00
+** Video: Unikernels: the rise of the library hypervisor in MirageOS - https://www.youtube.com/watch?v=dn4ARS4lDlQ
+- slides: https://www.slideshare.net/Docker/unikernels-the-rise-of-the-library-hypervisor-in-mirageos
+- Hypervisors:
+  - run full OS emulation
+  - sit at the bottom of everything make it hard to compose into the whole architecture.
+- Unikernels:
+  - OS broken down into individual "libraries" (tcp/ip, device drivers, schedulers)
+  - linked by conf file and a bootloader
+- RESUME: 8:00
+** Video: How to make a Netcat (with OCaml/MirageOS) - Oskar M Grande
+  - https://www.youtube.com/watch?v=37cLNsnLozE
+    https://github.com/musha68k/chill-netcat
