--- a/ai.org
+++ b/ai.org
@@ -1,3 +1,4 @@
+- https://stackoverflow.blog/2022/04/21/the-robots-are-coming-for-the-boring-parts-of-your-job/?cb=1
 - Standford Machine Learning Andrew NG https://www.youtube.com/watch?v=jGwO_UgTS7I&list=PLoROMvodv4rMiGQp3WXShtMGgzqpfVfbU&index=1
 - Course: 2020 Cornell CS 5787: Applied Machine Learning.
   https://www.youtube.com/playlist?list=PL2UML_KCiC0UlY7iCQDSiGDMovaupqc83
@@ -12,6 +13,7 @@
 - Video: Conal Elliott: Can Tensor Programming Be Liberated from the Fortran Data Paradigm?
   https://www.youtube.com/watch?v=oaIMMclGuog
   https://github.com/conal/talk-2021-can-tensor-programming-be-liberated
+- Deep Learning Book Lectures https://www.youtube.com/c/AlenaKruchkova/videos
 - MIT http://introtodeeplearning.com/
   https://www.youtube.com/playlist?list=PLtBw6njQRU-rwp5__7C0oIVt26ZgjG9NI
 - (Welch Labs) Neural Networks Demystified https://www.youtube.com/playlist?list=PLiaHhY2iBX9hdHaRr6b7XevZtgZRa1PoU
@@ -196,7 +198,7 @@ https://www.youtube.com/playlist?list=PLfYUBJiXbdtRL3FMB3GoWHRI8ieU6FhfM
     - Input: Variable Passive Averager from both inputs layer neurons
 - Output Layer
   - Same as a Neuron in Hidden
-  - a LED to the outpu
+  - a LED to the output
 ** Chapter 5 - Training with Back Propagation
 * Book: Loving Common Lisp, or the Savvy Programmer's
 ** Backpropagation Neural Networks
@@ -214,3 +216,40 @@ https://www.youtube.com/playlist?list=PLfYUBJiXbdtRL3FMB3GoWHRI8ieU6FhfM
     Using *sigmoid* function to map the sums to desired range.
 * Book: Grokking Deep Learning
 https://github.com/iamtrask/Grokking-Deep-Learning
+* Book: Deep Learning: A Visual Approach
+  https://nostarch.com/deep-learning-visual-approach
+  https://github.com/blueberrymusic/Deep-Learning-A-Visual-Approach (scikit-learn)
+** Introduction
+- Know, stats (to know how to describe the "patterns" in the data)
+- Know, ~bayes~ (to know the likelihood an algorithm is correct)
+- Know, IT (information theory) to measure kinds of information
+- Do, machine learning classification to explore the data we have before DL
+- Know, ensambles of different ML systems instead of a big one, sometimes is better
+- ~Backpropagation~ (a way of training) and ~Optizers~ (modifies the network numbers)
+- ~Convnet~ (convolution neural networks) made to handle spatial data, like images. Like recognizing objects.
+- ~Autoencoders~ simplify datasets, or clean images (?
+- ~Recurrent Neural Networks~ for sequences (text or audio)
+- ~Attention and Transformers~ to interpret and generate text
+- ~Reinforment Learning~ ?
+- ~Generative Adversarial Networks~ to generate data
+** Part 1
+** 1 An Overview of Machine Learning
+- Our goal (with ML) is to discover *meaningful* information,
+  where is up to us decide what's *meaninful*.
+- ~Expert Systems~: we create rules from what the experts tells us. Feature engineering.
+- ~Supervised Learning~: we provide *labeled* data.
+  When the system gets enough right answers for our needs we can say it is *trained*
+- ~Unsupervised Learning~: it learns about the relationships between the inputs provided.
+  Used for clustering into groups.
+  Used to improve the quality of data.
+  Used for compress data.
+- ~Reinforment Learning~ when we search to optimize (? something, but we don't know how.
+  While we judge how good or bad the algorthim is in relative terms. ("probably good", "better than the last one")
+  It can be always searching with new data, while using the "best" solution found.
+- ~Deep Learning~ uses a series of steps or *layers* for computation
+- Neurons turn input value into a number.
+  Neurons stay the same, what can change is the input and weights
+  Initial weights are random.
+  Loop -> Weights are adjusted carefully by a small ammount. And output is judged.
+  Neurons converge into looking for *features* although we never told him to.
+** 2 Essential Statistics
