--- a/languages/lisp/racket.org
+++ b/languages/lisp/racket.org
@@ -2,3 +2,7 @@ https://www.greghendershott.com/fear-of-macros/
 https://www.youtube.com/c/JoeGibbsPolitz/videos
 https://github.com/racket/racket/wiki/Frequently-Asked-Questions
 https://beautifulracket.com/
+- Course: OCAML to Racket
+  CMSC 430: Design and Implementation of Programming Languages
+  https://www.cs.umd.edu/class/fall2021/cmsc430/OCaml_to_Racket.html
+  https://www.youtube.com/watch?v=xKCFkXUcmK4&list=PLsg0tbEwZlcxS17oqa-I4bmmhlvwkUlp6&index=1
