--- a/languages/sql.org
+++ b/languages/sql.org
@@ -1,7 +1,11 @@
+- SQLite backups
+  https://litestream.io/alternatives/cron/
+  https://news.ycombinator.com/item?id=31386330
 - https://devcenter.heroku.com/articles/postgresql-indexes
 - AWS Aurora https://www.youtube.com/watch?v=XKPHbYe-fHQ
 - https://www.cybertec-postgresql.com/en/postgresql-exclude-beyond-unique/
 - DB Standford 2013 https://www.youtube.com/watch?v=D-k-h0GuFmE&list=PLroEs25KGvwzmvIxYHRhoGTz9w8LeXek0
+- High-Performance Programming https://www.youtube.com/c/HighPerformanceProgramming/videos
 * DONE Exclusion operators - EXPLAINING PostgreSQL
   https://www.youtube.com/watch?v=M58MR1vqnAk
   1) RANGE TYPES: allows us to store periods, stored as 2 fields
